--- a/WindowsApplication2/Misenesituation.vbproj
+++ b/WindowsApplication2/Misenesituation.vbproj
@@ -67,6 +67,15 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="itextsharp">
+      <HintPath>Library\itextsharp.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp.pdfa">
+      <HintPath>Library\itextsharp.pdfa.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp.xtra">
+      <HintPath>Library\itextsharp.xtra.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data">
       <HintPath>Z:\Config\Bureau\MySql.Data.dll</HintPath>
     </Reference>
@@ -265,9 +274,6 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="TextFile1.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
