--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 ################################################################################
 
 /WindowsApplication2/.vs/Misenesituation/v15/Server/sqlite3/db.lock
+
+\.vs/
+
+WindowsApplication2/bin/Debug/
+
+WindowsApplication2/obj/x86/Debug/
